--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 ALPACA_API_KEY=YOUR_API_KEY
 ALPACA_SECRET_KEY=YOUR_SECRET_KEY
+DATABASE_NAME=YOUR_DATABASE_NAME
+DATABASE_PASS=YOUR_DATABASE_PASS
+DATABASE_USER=YOUR_DATABASE_USER
+DATABASE_HOST=YOUR_DATABASE_HOST
