--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,24 @@
 [project]
-name = "vector-bt"
+name = "southdev-trader-strategyanalyzer"
 version = "0.1.0"
-description = "Automated Trading Backtesting Module using VectorBT"
+description = "Multi-timeframe trading strategy analyzer comparing RSI vs VWAP"
 readme = "README.md"
 requires-python = ">=3.9,<3.10"
 dependencies = [
     "vectorbtpro @ git+ssh://git@github.com/Southdev-tech/vectorbt.pro",
-    "pandas>=1.3.0,<2.3.0",
+    "pandas>=1.5.0,<2.1.0",
     "numpy>=1.21.0,<1.25.0",
-    "matplotlib>=3.4.0,<3.8.0",
-    "plotly>=5.0.0,<5.25.0",
-    "yfinance>=0.2.0",
-    "requests>=2.25.0",
-    "python-dateutil>=2.8.0",
-    "pytz>=2021.1",
-    "dateparser>=1.0.0",
-    "exchange-calendars>=4.0.0",
-    "ta-lib>=0.4.0",
-    "peewee>=3.14.0",
-    "schedule>=1.1.0",
-    "tqdm>=4.60.0",
-    "beautifulsoup4>=4.9.0",
-    "curl-cffi>=0.5.0",
-    "alpaca-py>=0.40.0",
-    "python-dotenv>=1.1.0",
     "numba==0.56.4",
     "llvmlite==0.39.1",
+    "python-dotenv>=1.0.0",
+    "matplotlib>=3.6.0,<3.8.0",
+    "plotly>=5.17.0,<5.25.0",
+    "alpaca-py>=0.40.0",
+    "requests>=2.28.0",
+    "exchange-calendars>=4.0.0",
+    "yfinance>=0.2.0",
+    "pytz>=2021.1",
+    "python-dateutil>=2.8.0",
 ]
 
 [project.optional-dependencies]
@@ -34,7 +27,14 @@ dev = [
     "black>=21.0.0",
     "isort>=5.0.0",
     "flake8>=3.8.0",
+    "autoflake>=2.0.0",
+    "autopep8>=2.0.0",
+    "pre-commit>=3.0.0",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.uv]
 package = false
@@ -43,11 +43,19 @@ dev-dependencies = [
     "black>=21.0.0",
     "isort>=5.0.0",
     "flake8>=3.8.0",
+    "autoflake>=2.0.0",
+    "autopep8>=2.0.0",
+    "pre-commit>=3.0.0",
 ]
 
 [tool.black]
-line-length = 88
+line-length = 120
 target-version = ['py39']
 
 [tool.isort]
-profile = "black" 
+profile = "black"
+line_length = 120
+
+[tool.flake8]
+max-line-length = 120
+extend-ignore = ["E203", "W503", "F541"]
