--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "numba==0.56.4",
     "llvmlite==0.39.1",
+    "psycopg2>=2.9.10",
+    "riskfolio-lib>=3.3.0",
 ]
 
 [project.optional-dependencies]
